--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -18,6 +18,10 @@
   text-align: center;
   width: 70%;
   height: auto;
+  margin: auto;
+  @include mobile-only {
+    width: 50%;
+  }
 }
 
 .align {
@@ -75,4 +79,10 @@ img {
 .max-width {
   width: 100%;
   height: auto;
+}
+
+.MuiTypography-h2 {
+  @include mobile-only {
+    font-size: 1.5rem !important;
+  }
 }
