--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -1,10 +1,7 @@
 form {
   display: flex;
   flex-direction: column;
-  height: 400px;
   justify-content: space-around;
-  width: 70%;
-  margin-top: auto;
-  margin-bottom: auto;
-  min-width: 200px;
+  width: 100%;
+  margin: 28px;
 }
