--- a/src/styles/layouts/header.scss
+++ b/src/styles/layouts/header.scss
@@ -1,13 +1,26 @@
 .header {
   display: flex;
   flex-direction: row;
-  padding: 16px 48px 0 48px;
+  padding: 16px 48px 16px 48px;
   justify-content: space-between;
   font-family: Arial, Helvetica, sans-serif;
   align-items: center;
+
   @include mobile-only {
     flex-direction: column;
+    padding: 0;
   }
+
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  &--small {
+    // transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    > div > a > img {
+      transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+      width: 32px;
+      height: auto;
+    }
+  }
+
   // position: fixed;
   // margin: 20px 40px 0 40px;
   // -webkit-box-shadow: 0px 14px 19px -2px rgba(0, 0, 0, 0.1);
@@ -16,6 +29,9 @@
     text-decoration: none;
     transition: transform 0.3s linear;
     color: black;
+    @include mobile-only {
+      margin-bottom: 10px;
+    }
     &:hover {
       color: black;
       opacity: 0.8;
@@ -43,14 +59,9 @@
   @include mobile-only {
     display: flex !important;
     margin: auto !important;
-    margin-bottom: 28px !important;
     opacity: 100;
     transition: all 0.5s ease-in;
     margin-top: 8px !important;
-    // margin-left: 41% !important;
-    > :first-child {
-      left: -20px;
-    }
   }
 }
 
