--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 @import "utils/variables.scss";
 @import "utils/mixins.scss";
@@ -6,9 +7,12 @@
 @import "components/button.scss";
 @import "components/icons.scss";
 @import "components/animation.scss";
+@import "components/glitch.scss";
 @import "components/carded.scss";
 @import "components/form.scss";
+@import "components/glassCards.scss";
 @import "layouts/header.scss";
 @import "layouts/footer.scss";
 @import "pages/home.scss";
 @import "pages/projects.scss";
+@import "pages/errorPage.scss";
