--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,34 +1,52 @@
 .home {
-  background-color: $primary-color;
-  margin: 24px 80px;
-  box-shadow: 0px 0px 20px 5px rgba(199, 199, 199, 0.5);
-  text-align: left;
-  padding: 48px;
-  min-height: 70vh;
+  // background-color: $primary-color;
+  background-image: url(https://images.unsplash.com/photo-1665042373764-93db981d6bf1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2048&q=80);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  padding-bottom: 32px;
+  padding-top: 180px;
+  // margin: 24px 80px;
+  // box-shadow: 0px 0px 20px 5px rgba(199, 199, 199, 0.5);
+  // text-align: left;
+  // padding: 48px;
+  // min-height: 70vh;
   @include mobile-only {
     margin: 8px 24px;
     padding: 16px;
     min-height: inherit;
   }
+  &__partTitle {
+    text-align: center;
+    font-weight: bold;
+    color: rgb(0 0 0 / 50%);
+    font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
+    font-size: 10rem;
+  }
   &__backTitle {
-    font-size: 128px;
+    // font-size: 128px;
+    font-size: 10rem;
+    font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
     color: white;
-    line-height: 144px;
-    @include mobile-only {
-      font-size: 40px;
-      line-height: 80px;
-    }
+    // line-height: 144px;
+    // @include mobile-only {
+    //   font-size: 40px;
+    //   line-height: 80px;
+    // }
   }
   &__subTitle {
-    @include titleFont();
-    margin: 10px;
+    font-weight: 700;
+    font-size: 2rem;
+    // @include titleFont();
+    // margin: 10px;
   }
   &__title {
-    @include headerFont();
-    margin: 10px;
+    // @include headerFont();
+    // margin: 10px;
+    font-size: 2.5rem;
   }
-  &__picture {
-    width: 70%;
+  &__section {
+    margin-top: 200px;
   }
   &__list {
     margin-top: auto;
@@ -38,7 +56,6 @@
       padding: 64px;
       margin-top: auto;
       margin-bottom: auto;
-      margin-left: 80px;
       @include mobile-only {
         margin-left: 0;
       }
@@ -52,4 +69,66 @@
       font-weight: 800;
     }
   }
+}
+
+.slow {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  background-image: url(https://plus.unsplash.com/premium_photo-1668800128890-bc8d2bf9af7e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+  position: absolute;
+  left: -200px;
+  box-shadow: 6px 6px 24px 6px rgb(0 0 0 / 12%);
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  &::after {
+    content: url("../../assets/arrowup.png");
+    display: inline-block;
+    display: block;
+    position: absolute;
+    top: 36%;
+    left: 37%;
+    opacity: 0;
+    transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    // width: 200px;
+    // height: 200px;
+  }
+  &:hover {
+    opacity: 0.8;
+    box-shadow: 6px 6px 24px 6px rgba(0, 0, 0, 0.359);
+    cursor: pointer;
+    &::after {
+      opacity: 1;
+    }
+  }
+}
+
+.fast {
+  width: 150px;
+  height: 150px;
+  border-radius: 100px;
+  background-image: url(https://plus.unsplash.com/premium_photo-1668800128617-c4e2b0714212?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80);
+  position: absolute;
+  left: -100px;
+  box-shadow: 6px 6px 24px 6px rgb(0 0 0 / 12%);
+  &:hover {
+    ~ .svgWrap {
+      display: block;
+      // cursor: pointer;
+    }
+  }
+}
+
+.abyss {
+  height: 3200px;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 33%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+.displaynone {
+  display: none;
 }
