--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -11,9 +11,13 @@
   &__subTitle {
     font-weight: 700;
     font-size: 28px;
-    margin: 20px 5px;
     max-width: 400px;
     line-height: 32px;
+    text-align: center;
+    @include mobile-only {
+      font-size: 20px;
+      line-height: 28px;
+    }
   }
 }
 
