--- a/src/styles/components/glassCards.scss
+++ b/src/styles/components/glassCards.scss
@@ -1,5 +1,5 @@
 .glassCard {
-  max-width: 1000px;
+  max-width: 800px;
   margin: 32px auto;
   padding: 32px;
   background: rgba(255, 255, 255, 0.34);
@@ -8,4 +8,8 @@
   backdrop-filter: blur(8.4px);
   -webkit-backdrop-filter: blur(8.4px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  @include mobile-only {
+    margin: 0;
+    max-width: 1000px;
+  }
 }
