--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -6,14 +6,8 @@
   background-attachment: fixed;
   padding-bottom: 32px;
   padding-top: 180px;
-  // margin: 24px 80px;
-  // box-shadow: 0px 0px 20px 5px rgba(199, 199, 199, 0.5);
-  // text-align: left;
-  // padding: 48px;
-  // min-height: 70vh;
   @include mobile-only {
-    margin: 8px 24px;
-    padding: 16px;
+    padding: 32px 0;
     min-height: inherit;
   }
   &__partTitle {
@@ -22,27 +16,23 @@
     color: rgb(0 0 0 / 50%);
     font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
     font-size: 10rem;
+    @include mobile-only {
+      font-size: 5rem;
+    }
   }
   &__backTitle {
-    // font-size: 128px;
     font-size: 10rem;
     font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
     color: white;
-    // line-height: 144px;
-    // @include mobile-only {
-    //   font-size: 40px;
-    //   line-height: 80px;
-    // }
+    @include mobile-only {
+      font-size: 5rem;
+    }
   }
   &__subTitle {
     font-weight: 700;
     font-size: 2rem;
-    // @include titleFont();
-    // margin: 10px;
   }
   &__title {
-    // @include headerFont();
-    // margin: 10px;
     font-size: 2.5rem;
   }
   &__section {
@@ -72,12 +62,12 @@
 }
 
 .slow {
-  width: 200px;
-  height: 200px;
+  width: 11rem;
+  height: 11rem;
   border-radius: 100px;
   background-image: url(https://plus.unsplash.com/premium_photo-1668800128890-bc8d2bf9af7e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
   position: absolute;
-  left: -200px;
+  left: -9rem;
   box-shadow: 6px 6px 24px 6px rgb(0 0 0 / 12%);
   transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   &::after {
@@ -103,8 +93,8 @@
 }
 
 .fast {
-  width: 150px;
-  height: 150px;
+  width: 130px;
+  height: 130px;
   border-radius: 100px;
   background-image: url(https://plus.unsplash.com/premium_photo-1668800128617-c4e2b0714212?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80);
   position: absolute;
